--- a/manpages/snapper-configs.html
+++ b/manpages/snapper-configs.html
@@ -138,6 +138,8 @@
               <p>Defines how many important snapshots the number cleanup
 	  algorithm should keep. Important snapshots have important=yes in the
 	  userdata. The youngest important snapshots will be kept.</p>
+              <p>The number of normal and important snapshots are counted
+	  independently.</p>
               <p>Default value is "10".</p>
               <p>New in version 0.1.8.</p>
             </dd>
