--- a/manpages/snapper.html
+++ b/manpages/snapper.html
@@ -170,6 +170,22 @@
             </dd>
             <dt>
               <span class="term">
+                <code class="option">--utc</code>
+              </span>
+            </dt>
+            <dd>
+              <p>Display dates and times in UTC.</p>
+            </dd>
+            <dt>
+              <span class="term">
+                <code class="option">--iso</code>
+              </span>
+            </dt>
+            <dd>
+              <p>Display dates and times in ISO format.</p>
+            </dd>
+            <dt>
+              <span class="term">
                 <code class="option">-t, --table-style</code>
               </span>
             </dt>
@@ -295,7 +311,7 @@
             </dd>
             <dt>
               <span class="term">
-                <code class="option">list [options]</code>
+                <code class="option">list (ls) [options]</code>
               </span>
             </dt>
             <dd>
@@ -406,7 +422,8 @@
             </dd>
             <dt>
               <span class="term">
-                <code class="option">delete <em class="replaceable"><code>number</code></em> | <em class="replaceable"><code>number1-number2</code></em></code>
+                <code class="option">delete (remove|rm) <em class="replaceable"><code>number</code></em> |
+	<em class="replaceable"><code>number1-number2</code></em></code>
               </span>
             </dt>
             <dd>
