- added link to GitHub issues

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ social: true
       <h2>Contribute</h2>
       <p>Snapper is open source. Port it to your distribution or integrate it with an application.</p>
       <p><a class="btn" href="http://github.com/openSUSE/snapper">Fork us on GitHub &raquo;</a></p>
+      <p>Please report <a href="http://github.com/openSUSE/snapper/issues">issues and
+      ideas</a> on GitHub.</p>
     </div>
   </div>
 
