- updated links to videos

--- a/videos.html
+++ b/videos.html
@@ -35,7 +35,7 @@ piwik: true
   Snapper's D-Bus interface, and then proceeds to expose the snapshot as a new
   Samba share.</p>
 
-  <p><a href="http://www.youtube.com/watch?v=VVKCRpccjPk">
+  <p><a href="http://www.youtube.com/watch?v=e36TUxlHALw">
       <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/VVKCRpccjPk/2.jpg) center center black;" alt=""/>
   </a></p>
 
@@ -43,7 +43,7 @@ piwik: true
   client can be used to create, expose and remove share snapshots on a remote
   Windows server.</p>
 
-  <p><a href="http://www.youtube.com/watch?v=csbEX4V2do0">
+  <p><a href="http://www.youtube.com/watch?v=3T7o9S_4iQw">
       <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/csbEX4V2do0/2.jpg) center center black;" alt=""/>
   </a></p>
 
@@ -51,7 +51,7 @@ piwik: true
   remote Windows client. The Windows client is able to access the snapshot via
   the Windows Explorer previous versions dialog.</p>
 
-  <p><a href="http://www.youtube.com/watch?v=RZq84ONWu1I">
+  <p><a href="http://www.youtube.com/watch?v=gbO6HcV4EUo">
       <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/RZq84ONWu1I/2.jpg) center center black;" alt=""/>
   </a></p>
 
