- added links to snapper guis

--- a/faq.html
+++ b/faq.html
@@ -138,6 +138,20 @@ piwik: true
       the default configuration.</p>
     </li>
 
+    <li>
+      <h3>Are there GUIs for snapper?</h3>
+
+      <p>Yes, there are independend projects providing GUIs for snapper:</p>
+
+      <ul>
+	<li><a href="https://github.com/yast/yast-snapper">yast2-snapper</a></li>
+	<li><a href="https://github.com/ricardomv/snapper-gui">snapper-gui</a></li>
+      </ul>
+
+      <p>For help and questions about those projects please contact the
+      corresponding author.</p>
+    </li>
+
   </ol>
 
 </div>
