- updated man-page

--- a/manpages/snapper-configs.html
+++ b/manpages/snapper-configs.html
@@ -255,6 +255,13 @@
         </div>
       </div>
       <div class="refsect1">
+        <a id="notes"></a>
+        <h2>NOTES</h2>
+        <p>The default values stated here are the values snapper uses when the
+    entry is missing in the configuration file. Some are not identical to the
+    values from the configuration file template.</p>
+      </div>
+      <div class="refsect1">
         <a id="homepage"></a>
         <h2>HOMEPAGE</h2>
         <p>
