- added link to review on linux.com

--- a/documentation.html
+++ b/documentation.html
@@ -52,6 +52,7 @@ piwik: true
     (in German)</a></li>
     <li><a href="http://www.pro-linux.de/artikel/2/1543/3,opensuse-121.html">pro-linux.de
     (in German)</a></li>
+    <li><a href="http://www.linux.com/news/enterprise/systems-management/878490-snapper-suses-ultimate-btrfs-snapshot-manager">Linux.com</a></li>
   </ul>
 
   <h3>Miscellaneous</h3>
