--- a/documentation.html
+++ b/documentation.html
@@ -15,6 +15,7 @@ piwik: true
     <li><a href="manpages/pam_snapper.html">pam_snapper</a></li>
     <li><a href="manpages/snapper-zypp-plugin.html">snapper-zypp-plugin</a></li>
     <li><a href="manpages/snapper-zypp-plugin.conf.html">snapper-zypp-plugin.conf</a></li>
+    <li><a href="manpages/mksubvolume.html">mksubvolume</a></li>
   </ul>
 
   <h3>Blogs</h3>
