--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ social: true
 
       <p>Greg Kroah-Hartman and Matthias Eckermann play sysadmins and ruin a web server configuration.</p>
 
-      <p><a href="http://www.youtube.com/v/9H7e6BcI5Fo?start=209">
+      <p><a href="https://www.youtube.com/watch?v=9H7e6BcI5Fo&t=3m29s">
           <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/9H7e6BcI5Fo/1.jpg?start=209) center center black;" alt=""/>
       </a></p>
 
