- updated man pages

--- a/manpages/snapper-configs.html
+++ b/manpages/snapper-configs.html
@@ -72,6 +72,18 @@
             </dd>
             <dt>
               <span class="term">
+                <code class="option">FREE_LIMIT=<em class="replaceable"><code>float</code></em></code>
+              </span>
+            </dt>
+            <dd>
+              <p>Limit for the fraction of the filesystem space that
+	  should be free.</p>
+              <p>Only supported for btrfs.</p>
+              <p>Default value is "0.2".</p>
+              <p>New in version 0.8.0.</p>
+            </dd>
+            <dt>
+              <span class="term">
                 <code class="option">ALLOW_USERS=<em class="replaceable"><code>users</code></em></code>
               </span>
             </dt>
