--- a/manpages/snapper.html
+++ b/manpages/snapper.html
@@ -473,6 +473,29 @@
                   <dd>
                     <p>Create a pre and post snapshot and run command in between.</p>
                   </dd>
+                  <dt>
+                    <span class="term">
+                      <code class="option">--read-only</code>
+                    </span>
+                  </dt>
+                  <dd>
+                    <p>Create a read-only snapshot. This is the default.</p>
+                  </dd>
+                  <dt>
+                    <span class="term">
+                      <code class="option">--read-write</code>
+                    </span>
+                  </dt>
+                  <dd>
+                    <p>Create a read-write snapshot.</p>
+                  </dd>
+                  <dt>
+                    <span class="term"><code class="option">--from</code> <em class="replaceable"><code>number</code></em></span>
+                  </dt>
+                  <dd>
+                    <p>Create a snapshot from the snapshot with the
+		provided number instead of snapshot 0.</p>
+                  </dd>
                 </dl>
               </div>
             </dd>
