--- a/documentation.html
+++ b/documentation.html
@@ -40,13 +40,17 @@ layout: default
   <h3>Reviews</h3>
 
   <ul>
+    <!-- target seems to be gone
     <li><a href="http://www.linuxuser.co.uk/reviews/suse-linux-enterprise-server-11-sp2-review">Linux
     User</a></li>
+    -->
     <li><a href="http://www.heise.de/open/artikel/Was-OpenSuse-12-1-bringt-1379293.html">heise.de
     (in German)</a></li>
     <li><a href="http://www.pro-linux.de/artikel/2/1543/3,opensuse-121.html">pro-linux.de
     (in German)</a></li>
+    <!-- target seems to be gone
     <li><a href="http://www.linux.com/news/enterprise/systems-management/878490-snapper-suses-ultimate-btrfs-snapshot-manager">Linux.com</a></li>
+    -->
   </ul>
 
   <h3>Miscellaneous</h3>
