- state that ext4 support is discontinued

--- a/faq.html
+++ b/faq.html
@@ -54,8 +54,9 @@ layout: default
     <li>
       <h3>Does snapper support ext4?</h3>
 
-      <p>Yes, but only experimentally and you need a special kernel and
-      e2fsprogs. For more information see the next4 project.</p>
+      <p>No, the support in snapper is discontinued and you need a
+      special kernel and e2fsprogs. For more information see the next4
+      project.</p>
     </li>
 
     <li>
