--- a/overview.html
+++ b/overview.html
@@ -30,7 +30,7 @@ layout: default
     </li>
 
     <li>
-      <p>Works with btrfs, ext4 and thin-provisioned LVM volumes</p>
+      <p>Works with btrfs, ext4 (discontinued) and thin-provisioned LVM volumes</p>
     </li>
 
     <li>
