- added troubleshhting for btrfs with swapfile

--- a/documentation.html
+++ b/documentation.html
@@ -37,6 +37,12 @@ layout: default
     <li><a href="faq.html">FAQ</a></li>
   </ul>
 
+  <h3>Troubleshooting</h3>
+
+  <ul>
+    <li><a href="troubleshooting.html">Troubleshooting</a></li>
+  </ul>
+
   <h3>Reviews</h3>
 
   <ul>
