- updated man pages

--- a/manpages/snapper.html
+++ b/manpages/snapper.html
@@ -229,6 +229,14 @@
             </dd>
             <dt>
               <span class="term">
+                <code class="option">--abbreviate</code>
+              </span>
+            </dt>
+            <dd>
+              <p>Try to abbreviate texts in some columns so that tables fit the width of the screen.</p>
+            </dd>
+            <dt>
+              <span class="term">
                 <code class="option">--machine-readable <em class="replaceable"><code>format</code></em></code>
               </span>
             </dt>
