- added link to obs project

--- a/development.html
+++ b/development.html
@@ -37,6 +37,12 @@ make</code></pre>
   dbus-1-devel, docbook-xsl-stylesheets, gettext-tools, gcc-c++, libtool,
   libxml2-devel, make, pam-devel (for optional PAM module), xsltproc</p>
 
+  <h3>openSUSE buildservice project</h3>
+
+  <p>The openSUSE buildservice
+  project <a href='https://build.opensuse.org/project/monitor/filesystems%3Asnapper/'>filesystems:snapper</a>
+  always builds the latest version from the sources on GitHub.</p>
+
   <h3>Mailing list</h3>
 
   <p>So far there is no dedicated mailing list for snapper development. The
