--- a/manpages/pam_snapper.html
+++ b/manpages/pam_snapper.html
@@ -24,7 +24,7 @@
       <div class="refsect1">
         <a id="description"></a>
         <h2>DESCRIPTION</h2>
-        <p>Create a snapshot at every login of a user, thus he or she always has a save
+        <p>Create a snapshot at every login of a user, thus they always have a save
     starting point.</p>
         <p>As many users do not logout for some time, it is a good idea to
     enable snapper's time based snapshots in addition.</p>
