--- a/manpages/snapper-configs.html
+++ b/manpages/snapper-configs.html
@@ -64,11 +64,13 @@
               </span>
             </dt>
             <dd>
-              <p>Limit for the fraction of the filesystems space the snapshots
-	  should use.</p>
+              <p>Limit of the filesystems space the snapshots should
+	  use. Either a fraction of the whole filesystem for an
+	  absolute value. An absolute value must use the C locale.</p>
               <p>Only supported for btrfs.</p>
               <p>Default value is "0.5".</p>
-              <p>New in version 0.3.0.</p>
+              <p>New in version 0.3.0, absolute value new in version
+	  0.9.0.</p>
             </dd>
             <dt>
               <span class="term">
@@ -76,11 +78,12 @@
               </span>
             </dt>
             <dd>
-              <p>Limit for the fraction of the filesystem space that
-	  should be free.</p>
+              <p>Limit of the filesystem space that should be
+	  free. Either a fraction of the whole filesystem for an absolute
+	  value. An absolute value must use the C locale.</p>
               <p>Only supported for btrfs.</p>
               <p>Default value is "0.2".</p>
-              <p>New in version 0.8.0.</p>
+              <p>New in version 0.8.0, absolute value new in version 0.9.0.</p>
             </dd>
             <dt>
               <span class="term">
