--- a/manpages/snapper-configs.html
+++ b/manpages/snapper-configs.html
@@ -60,7 +60,8 @@
             </dd>
             <dt>
               <span class="term">
-                <code class="option">SPACE_LIMIT=<em class="replaceable"><code>float</code></em></code>
+                <code class="option">SPACE_LIMIT=<em class="replaceable"><code>float</code></em> or
+	<em class="replaceable"><code>size</code></em></code>
               </span>
             </dt>
             <dd>
@@ -74,7 +75,8 @@
             </dd>
             <dt>
               <span class="term">
-                <code class="option">FREE_LIMIT=<em class="replaceable"><code>float</code></em></code>
+                <code class="option">FREE_LIMIT=<em class="replaceable"><code>float</code></em> or
+	<em class="replaceable"><code>size</code></em></code>
               </span>
             </dt>
             <dd>
